--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -9,6 +9,19 @@ jenkins:
       permissions:
       - "Overall/Administer:panda"
   numExecutors: 0
+  nodes:
+  - permanent:
+      labelString: "agent"
+      launcher:
+        ssh:
+          credentialsId: "jenkins_agent"
+          host: "192.168.44.44"
+          port: 2222
+          sshHostKeyVerificationStrategy: "nonVerifyingKeyVerificationStrategy"
+      name: "agent"
+      
+      remoteFS: "/home/jenkins/agent"
+      retentionStrategy: "always"
 
 credentials:
   system:
@@ -82,3 +95,6 @@ unclassified:
         triggers:
           skipScmCause: false
           skipUpstreamCause: false
+  location:
+    url: "http://192.168.44.44:8880/"
+
