--- a/jenkins_agent/Dockerfile
+++ b/jenkins_agent/Dockerfile
@@ -1,7 +1,7 @@
 FROM jenkins/ssh-agent:4.2.1-jdk11
 USER root
 RUN apt update && apt install -y curl python3 python3-pip unzip ansible git
-RUN addgroup -gid 997 docker && usermod -aG docker jenkins
+RUN groupadd -g 996 docker && usermod -aG docker jenkins
 RUN curl -fsSL https://get.docker.com | sh
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install
 RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose \
